quick fix to clipped radar axis labels

--- a/src/css/story/radar.styl
+++ b/src/css/story/radar.styl
@@ -13,6 +13,14 @@
       font-family Helvetica, Arial, sans-serif
       letter-spacing 0.05em
       text-transform uppercase
+      text-anchor middle
+    text.left
+      text-anchor start
+    text.right
+      text-anchor end
+    text.left, text.right
+      // XXX: hack
+      transform translateY(-2px)
     text.highlight
       font-size $fs * 1.3
       font-weight bold
